@@ -3,6 +3,9 @@
    - jmc@cvs.openbsd.org 2010/04/16 06:45:01
      [ssh_config.5]
      tweak previous; ok djm
+   - jmc@cvs.openbsd.org 2010/04/16 06:47:04
+     [ssh-keygen.1 ssh-keygen.c]
+     tweak previous; ok djm
 
 20100416
  - (djm) Release openssh-5.5p1
